Correct style for visually-hidden class
Hide only visually, but have it available for screenreaders

--- a/scss/_dotclear.scss
+++ b/scss/_dotclear.scss
@@ -4,6 +4,7 @@
  See: https://github.com/mozdevs/cssremedy/issues/11
 */
 @media (prefers-reduced-motion: reduce) {
+
   *,
   ::before,
   ::after {
@@ -16,6 +17,19 @@
     transition-duration: 0s !important;
   }
 }
+
+/* Hide only visually, but have it available for screenreaders: h5bp.com/v */
+.visually-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
 
 ::selection {
   color: $white;
