--- a/scss/_dotclear.scss
+++ b/scss/_dotclear.scss
@@ -505,3 +505,9 @@ button.submit:hover {
 .dc-search em:after {
   content: '"'
 }
+
+.img-profile {
+  object-fit: cover;
+  width: 15rem;
+  height: 15rem;
+}
