--- a/css/resume.css
+++ b/css/resume.css
@@ -672,3 +672,9 @@ button.submit:hover {
 .dc-search em:after {
   content: '"';
 }
+
+.img-profile {
+  object-fit: cover;
+  width: 15rem;
+  height: 15rem;
+}
