--- a/css/dotclear.css
+++ b/css/dotclear.css
@@ -62,7 +62,7 @@ section.resume-section .resume-section-content {
 
 ::selection {
   color: #fff;
-  background-color: #BD5D38;
+  background-color: var(--bs-primary);
 }
 
 ul {
@@ -464,7 +464,7 @@ ul.post-tags-list li {
 }
 
 #search .submit {
-  background-color: #BD5D38;
+  background-color: var(--bs-primary);
   color: #fff;
   vertical-align: top;
   font-variant: small-caps;
@@ -476,7 +476,7 @@ ul.post-tags-list li {
 }
 
 #search .submit:focus {
-  background: #BD5D38;
+  background: var(--bs-primary);
 }
 
 #search .submit:hover {
@@ -511,7 +511,7 @@ button.submit {
   -moz-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
   color: #fff;
-  background-color: #BD5D38;
+  background-color: var(--bs-primary);
   font-weight: bold;
 }
 
@@ -537,4 +537,53 @@ button.submit:hover {
   object-fit: cover;
   width: 15rem;
   height: 15rem;
+}
+
+/* COLOR SWITCHER */
+
+a {
+  color: var(--bs-primary);
+}
+
+a:hover, a:focus, a:active {
+  filter: brightness(50%);
+  color: var(--bs-primary);
+}
+
+.social-icons .social-icon:hover {
+  background-color: var(--bs-primary);
+}
+
+.dev-icons .list-inline-item i:hover {
+  color: var(--bs-primary);
+}
+
+.bg-primary {
+  background-color: var(--bs-primary) !important;
+}
+
+.text-primary {
+  color: var(--bs-primary) !important;
+}
+
+#content a:hover {
+  filter: brightness(50%);
+}
+
+::selection {
+  color: #fff;
+  background-color: var(--bs-primary);
+}
+
+#search .submit {
+  background-color: var(--bs-primary);
+}
+
+#search .submit:focus {
+  background: var(--bs-primary);
+}
+
+button.preview,
+button.submit {
+  background-color: var(--bs-primary);
 }
