--- a/css/dotclear.css
+++ b/css/dotclear.css
@@ -137,7 +137,7 @@ p.post-info span {
 blockquote {
   font-size: 0.9em;
   line-height: 1.33;
-  quotes: "“" "”";
+  quotes: "“""”";
   margin-top: 1.7777778em;
   font-style: italic;
 }
@@ -586,4 +586,9 @@ a:hover, a:focus, a:active {
 button.preview,
 button.submit {
   background-color: var(--bs-primary);
+}
+
+#sideNav a:hover {
+  color: #fff;
+  filter: brightness(100%);
 }
