Remove unnecessary $theme_url and fix social icons hover state

--- a/css/dotclear.css
+++ b/css/dotclear.css
@@ -592,3 +592,8 @@ button.submit {
   color: #fff;
   filter: brightness(100%);
 }
+
+.social-icons a:hover {
+  color: #fff;
+  filter: brightness(100%);
+}
