--- a/css/dotclear.css
+++ b/css/dotclear.css
@@ -594,15 +594,11 @@ button.submit {
   filter: brightness(100%);
 }
 
-/*#sideNav .active > a {
-  color: #fff;
-}*/
+a[href$=jpg], a[href$=jpeg], a[href$=jpe], a[href$=png], a[href$=gif] {
+  filter: none !important;
+}
 
 .social-icons a:hover {
   color: #fff;
   filter: brightness(100%);
-}
-
-a.media-link:hover, a.media-link:focus, a.media-link:active {
-  filter: none !important;
 }
